--- a/grau2.css
+++ b/grau2.css
@@ -1,9 +1,9 @@
-body{
-    background-color: rgb(202, 133, 187);
+body {
+    background-color: #c19ceb;
 }
-.entrada{
+.entrada {
     width: 40px;
+    background-color:  #c19ceb;
     border: none;
-    background-color: rgb(202, 133, 187);
     border-bottom: 2px solid #000;
 }
